# cb-agent-catalog

./: README.md  app.py  cbsetup.py  couchbaseops.py  langchainsetup.py  pyproject.toml  reindex.py
agentic/: classes.py  embedding.py  metadata_tag.py  parser.py  prompts.py  tools.py
agentic/agentc/models/: donwload-model.py  download-model.py
agentic/agentc/prompts/: general_support.jinja  identify_sentiment.jinja
agentic/agentc/tools/: create_refund_ticket.py  create_refund_ticket.sqlpp  defect_search.yaml  get_customer_sentiment.py  get_customer_sentiment1.py  get_previous_messages.sqlpp  get_products_details.sqlpp  get_sku_cad.py  get_tickets_by_sku.sqlpp  info_or_policy_search.yaml  refund_policy_search.yaml  retrieve_order.sqlpp  retrieve_product.sqlpp  retrive_product_category.sqlpp  summarize_tool_invocations.py
dataset/: defects.json  manipulate.py  products.json  tickets.json
static/: fts-index.json
static/eventing/: process_message.json  process_refund_ticket.json
static/fts/: defect_fts.json  defects-fts.json  defects_fts.json
templates/: index.html
