[tool.poetry]
name = "agentic-customer-service-with-agentc"
version = "0.1.0"
description = ""
authors = ["sillyjason <sillyjason.cao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "3.9.5"
aiohttp-retry = "2.8.3"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.4.0"
attrs = "23.2.0"
bidict = "0.23.1"
blinker = "1.8.2"
build = "1.2.2.post1"
cachecontrol = "0.14.1"
certifi = "2024.6.2"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
couchbase = "4.3.0"
crashtest = "0.4.1"
dataclasses-json = "0.6.6"
distlib = "0.3.9"
distro = "1.9.0"
dulwich = "0.21.7"
fastjsonschema = "2.21.1"
filelock = "3.16.1"
flask = "3.0.3"
flask-socketio = "5.3.6"
frozenlist = "1.4.1"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.7"
installer = "0.7.0"
itsdangerous = "2.2.0"
jaraco-classes = "3.4.0"
jinja2 = "3.1.4"
jsonpatch = "1.33"
jsonpointer = "2.4"
keyring = "24.3.1"
langchain = "0.2.12"
langchain-community = "0.2.4"
langchain-core = "0.2.28"
langchain-openai = "0.1.20"
langchain-text-splitters = "0.2.1"
langchain-tools = "0.1.34"
langgraph = "0.1.1"
langsmith = "0.1.147"
markupsafe = "2.1.5"
marshmallow = "3.21.3"
more-itertools = "10.5.0"
msgpack = "1.1.0"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
numpy = "1.26.4"
openai = "1.32.0"
orjson = "3.10.3"
packaging = "23.2"
pexpect = "4.9.0"
phonenumbers = "8.13.38"
pkginfo = "1.12.0"
platformdirs = "4.3.6"
poetry = "1.8.5"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
ptyprocess = "0.7.0"
pycparser = "2.22"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pyjwt = "2.8.0"
pyproject-hooks = "1.2.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-engineio = "4.9.1"
python-socketio = "5.11.2"
pyyaml = "6.0.1"
rapidfuzz = "3.11.0"
regex = "2024.5.15"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
simple-websocket = "1.0.0"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.30"
tenacity = "8.3.0"
tiktoken = "0.7.0"
tomlkit = "0.13.2"
tqdm = "4.66.5"
trove-classifiers = "2024.10.21.16"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
urllib3 = "2.2.1"
virtualenv = "20.28.0"
werkzeug = "3.0.3"
wsproto = "1.2.0"
xattr = "1.1.0"
yarl = "1.9.4"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.dependencies.agentc]
path = "./agent-catalog/libs/agentc"
extras = ["langchain"]
develop = true